Fixed some issues with overflow causing weird behavior

--- a/src/app/components/homePage/shared/eventPortal.less
+++ b/src/app/components/homePage/shared/eventPortal.less
@@ -48,6 +48,7 @@
   .event-body {
     display: flex;
     flex-grow: 1;
+    flex-shrink: 0;
     justify-content: center;
     width: 100%;
     height: 70%;
@@ -63,11 +64,11 @@
     flex-direction: column;
     flex-grow: 1;
 
-    .confirmed {
+    .assigned {
       background-color: lightgreen;
     }
 
-    .not-confirmed {
+    .unassigned {
       background-color: red;
     }
 
